--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="input">
     <input type="text" name="numberOfCells" id="numberOfCells">
-    <button onclick="startGame()">Generate</button>
+    <button onclick="startGame()">Generate Island</button>
     </div>
 </body>
 </html>
