--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="input">
-    <input type="text" name="numberOfCells" id="numberOfCells" label="Enter number of rows" required>
+    <input type="text" placeholder="Enter number of rows" name="numberOfCells" id="numberOfCells"  required>
     <button onclick="createGame()">Generate Island</button>
     </div>
 </body>
