--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <h1>Treasure in the island</h1>
+    <form action="javascript:createGame()">
     <div id="input">
-        <input type="number" placeholder="Enter number of rows" min="3" max="9"  id="numberOfCells" required />
-        <button onclick="createGame()">Generate Island</button>
+        <input type="number" placeholder="Enter number of rows" min="3" max="15"  id="numberOfCells" required />
+        <button>Generate Island</button>
     </div>
+    </form>
 </body>
 </html>
